// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: error 1`] = `
{
  "message": {
    "color": "#FC4040",
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: none 1`] = `
{
  "message": {
    "color": undefined,
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: dark and state: success 1`] = `
{
  "message": {
    "color": "#09D087",
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: error 1`] = `
{
  "message": {
    "color": "#CC1922",
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: none 1`] = `
{
  "message": {
    "color": undefined,
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFunctionalComponentStateMessageStyles() should return correct JssStyle for theme: light and state: success 1`] = `
{
  "message": {
    "color": "#197E10",
    "display": "flex",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "gap": "4px",
    "hyphens": "auto",
    "marginTop": "4px",
    "overflowWrap": "break-word",
    "transition": "color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;
